release 7.8.0 changes has been done